# juris-ai

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  design-system.md  docker-compose.yml  prd.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: juridico.py  router.py  triagem.py
backend/app/agents/prompts/: juridico.md  triagem.md
backend/app/api/alertas/: router.py
backend/app/api/analytics/: router.py
backend/app/api/chat/: router.py
backend/app/api/configuracoes/: router.py
backend/app/api/crm/: router.py
backend/app/api/dashboard/: router.py
backend/app/api/inboxes/: router.py
backend/app/api/processos/: router.py
backend/app/api/public/: leads.py
backend/app/api/webhooks/: evolution.py
backend/app/core/: auth.py  config.py  llm.py  logging.py
backend/app/integrations/: evolution.py  supabase.py
backend/app/models/: chat.py  crm.py  processos.py
backend/app/rpa/: __init__.py  monitoramento.py  notificador.py  pdf_extractor.py  scheduler.py
backend/app/rpa/providers/: __init__.py  base.py  datajud.py  jusbrasil.py
backend/tests/: test_health.py
backend/tests/agents/: test_juridico.py  test_router.py
backend/tests/api/: test_alertas.py  test_analytics.py  test_processos_models.py
backend/tests/rpa/: test_datajud.py  test_monitoramento.py  test_notificador.py  test_pdf_extractor.py
frontend/: .env.local.example  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
(+101 files in other folders)
